Version 2.02.178 - 
=====================================
  Remove RaidLV on creation failure when rmeta devices can't be activated.
  Add prioritized_section() to restore cookie boundaries (2.02.177).
  Enhance error messages when read error happens.
  Enhance mirror log initialization for old mirror target.
  Skip private crypto and stratis devices.
  Skip frozen raid devices from scanning.
  Activate RAID SubLVs on read_only_volume_list readwrite
  Offer convenience type raid5_n converting to raid10
  Automatically avoid reading invalid snapshots during device scan.
  Ensure COW device is writable even for read-only thick snapshots.
  Support activation of component LVs in read-only mode.
  Extend internal library to recognize and work with component LV.
  Skip duplicate check for active LV when prompting for its removal.
  Activate correct lock holding LV when it is cached.
  Do not modify archived metadata when removing striped raid.
  Fix memleak on error path when obtaining lv_raid_data_offset.
  Fix compatibility size test of extended external origin.
  Add external_origin visiting in for_each_sub_lv().
  Ensure cluster commands drop their device cache before locking VG.
  Do not report LV as remotely active when it's locally exclusive in cluster.
  Add deprecate messages for usage of mirrors with mirrorlog.
  Separate reporting of monitoring status and error status.
  Improve validation of created strings in vgimportclone.
  Add missing initialisation of mem pool in systemd generator.
  Do not reopen output streams for multithreaded users of liblvm.
  Use versionsort to fix archive file expiry beyond 100000 files.
  Add devices/use_aio, aio_max, aio_memory to configure AIO limits.
  Support asynchronous I/O when scanning devices.
  Detect asynchronous I/O capability in configure or accept --disable-aio.
  Add AIO_SUPPORTED_CODE_PATH to indicate whether AIO may be used.
  Configure ensures /usr/bin dir is checked for dmpd tools.