@@ -1,5 +1,6 @@
 Version 2.02.178 - 
 =====================================
+  Allow activation of pools when thin/cache_check tool is missing.
   Remove RaidLV on creation failure when rmeta devices can't be activated.
   Add prioritized_section() to restore cookie boundaries (2.02.177).
   Enhance error messages when read error happens.
